tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-at-addr-of.wyst
module removed_at_addr_of

var word: u64 = 0
const BAD: @u64 = @addr_of(word)
